--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -1,4 +1,5 @@
 {% extends parent_template|default:"base.html" %}
+{% load humanize %}
 {% load thumbnail %}
 {% load is_new %}
 {% load static %}
@@ -23,9 +24,9 @@
                             <div class="level-item">
                                 <p class="subtitle is-5">
                                     {% if page_obj.paginator %}
-                                        <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
+                                        <strong>{{ page_obj.paginator.count|intcomma }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
                                     {% else %}
-                                        <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
+                                        <strong>{{ issue_list.count|intcomma }}</strong> Issue{{ issue_list.count|pluralize }}
                                     {% endif %}
                                 </p>
                             </div>
