--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -20,7 +20,7 @@
                 <div class="level-left">
                     <div class="level-item">
                         <p class="subtitle is-5">
-                            <strong>{{ page_obj.paginator.count }}</strong> Team{{ page_obj.paginator.count|pluralize }}
+                            <strong>{{ page_obj.paginator.count|intcomma }}</strong> Team{{ page_obj.paginator.count|pluralize }}
                         </p>
                     </div>
                     <div class="level-item">
