--- a/comicsdb/templates/comicsdb/universe_list.html
+++ b/comicsdb/templates/comicsdb/universe_list.html
@@ -1,4 +1,5 @@
 {% extends parent_template|default:"base.html" %}
+{% load humanize %}
 {% load thumbnail %}
 {% load static %}
 {% load humanize %}
@@ -19,7 +20,7 @@
                 <div class="level-left">
                     <div class="level-item">
                         <p class="subtitle is-5">
-                            <strong>{{ page_obj.paginator.count }}</strong> Universe{{ page_obj.paginator.count|pluralize }}
+                            <strong>{{ page_obj.paginator.count|intcomma }}</strong> Universe{{ page_obj.paginator.count|pluralize }}
                         </p>
                     </div>
                     <div class="level-item">
