Fix aliases formatting

--- a/comicsdb/templates/comicsdb/character_detail.html
+++ b/comicsdb/templates/comicsdb/character_detail.html
@@ -185,10 +185,7 @@
                     {% with aliases=character.alias %}
                         <p>
                             <b>Alias{{ aliases|pluralize:"es" }}:</b>
-                            {% for alias in aliases %}
-                                {% if not forloop.first %},{% endif %}
-                                {{ alias }}
-                            {% endfor %}
+                            {{ aliases|join:", " }}
                         </p>
                     {% endwith %}
                 {% endif %}
